--- a/_layouts/aukcja.html
+++ b/_layouts/aukcja.html
@@ -45,14 +45,18 @@
               <div class="divider divider-small divider-small-sm">
 							<hr>
 							</div>
+              {% if page.price %}
               <p class="card-text text-color-dark text-4">Wielkość naturalna: {{ page.price | times:1.2 | round: 2 | append: '0' }} zł </p>
+              {% endif %}
+              {% if page.price-1 %}
               <p class="card-text text-color-dark text-4">Wielkość pomniejszona: {{ page.price-1 | times:1.2 | round: 2 | append: '0' }} zł </p>
+              {% endif %}
               <div class="divider divider-small divider-small-sm">
 							<hr>
 							</div>
               <h4 class="card-title mb-1 text-4"><i class="icon-heart icons"></i> Aukcja Charytatywna</h4>
               <p class="card-text text-color-dark text-3">Dochód z tej aukcji zostanie przekazany na pomoc dla środowisk ludzi wykluczonych.</p>
-
+              {% if page.price %}
                 <form name="p24" action="https://cart.przelewy24.pl/index/add" method="post" accept-charset="utf-8">
                   <input type="hidden" name="p24_crc" value="41c75516d38a4fd1" />
                   <input type="hidden" name="p24_id_salesman" value="97190" />
@@ -63,6 +67,8 @@
                   <input class="btn btn-outline btn-dark mb-2 przelewy-add-item" type="submit" name="" value="Kup wielkość naturalną ({{ page.price | times:1.2 | round: 2 | append: '0' }} zł)" />
                   <input type="hidden" name="p24_add" value="1" />
                 </form>
+              {% endif %}
+              {% if page.price-1 %}
                 <form name="p24" action="https://cart.przelewy24.pl/index/add" method="post" accept-charset="utf-8">
                   <input type="hidden" name="p24_crc" value="41c75516d38a4fd1" />
                   <input type="hidden" name="p24_id_salesman" value="97190" />
@@ -73,6 +79,7 @@
                   <input class="btn btn-outline btn-dark mb-2 przelewy-add-item" type="submit" name="" value="Kup wielkość pomniejszoną ({{ page.price-1 | times:1.2 | round: 2 | append: '0' }} zł)" />
                   <input type="hidden" name="p24_add" value="1" />
                 </form>
+              {% endif %}
             </div>
           </div>
         </div>
