--- a/_includes/header-hero-slider.html
+++ b/_includes/header-hero-slider.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-7 col-lg-6">
                 <h1 class="text-color-light font-weight-extra-bold text-6 text-lg-10 text-xl-14 line-height-1 negative-ls-1 pb-2 mb-2 mb-xl-4">Wystawy i Aukcje</h1>
-                <p class="custom-font-secondary custom-text-color-light-1 line-height-5 text-xl-5 pr-5 pb-3 mb-2 mb-xl-4"> <strong class="text-color-light">Prowadzimy stałe wystawy i aukcje, z których dochód przeznaczamy na pomoc dla środowisk ludzi wykluczonych.</strong></p>
+                <p class="custom-font-secondary custom-text-color-light-1 line-height-5 text-xl-5 pr-5 pb-3 mb-2 mb-xl-4"> <strong class="text-color-light">Prowadzimy stałe wystawy i aukcje, z których dochód przeznaczamy na pomoc dla środowisk ludzi wykluczonych oraz na cele statutowe Fundacji.</strong></p>
                 <a href="/aukcje/" class="btn btn-secondary btn-outline text-color-light font-weight-semibold border-width-4 custom-link-effect-1 text-1 text-xl-3 d-inline-flex align-items-center px-4 py-3">SPRAWDŹ AUKCJE <i class="custom-arrow-icon ml-2"></i></a>
             </div>
         </div>
