--- a/_sass/skin-2.scss
+++ b/_sass/skin-2.scss
@@ -1836,7 +1836,7 @@ html .word-rotator.loading-bar-light .word-rotator-words::after {
 }
 
 .process .process-step-circle {
-	border-color: #0053ce;
+	/*border-color: #0053ce;*/
 }
 
 .process .process-step:hover .process-step-circle {
