--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@
       </div>
       <div class="row py-4 mt-2">
         <div class="col-lg-12 text-center text-lg-right">
-          <p class="text-3 mb-0">© Copyright {{ site.time | date: '%Y' }} by {{ site.title-short }}. All Rights Reserved.</p>
+          <p class="text-3 mb-0">© Copyright {{ site.time | date: '%Y' }} by {{ site.title-short }}. All Rights Reserved.  <a class="text-light" href="/polityka-prywatnosci/"> Polityka prywatności</a></p>
         </div>
       </div>
     </div>
