--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,6 @@
 <script src="{{ "/assets/js/jquery.min.js" | relative_url }}"></script>
 <script src="{{ "/assets/js/jquery.easing.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/popper.min.js" | relative_url }}"></script>
 <script src="{{ "/assets/js/bootstrap.min.js" | relative_url }}"></script>
 <script src="{{ "/assets/js/common.min.js" | relative_url }}"></script>
 <script src="{{ "/assets/js/owl.carousel.min.js" | relative_url }}"></script>
